--- a/recuProgra.cbp
+++ b/recuProgra.cbp
@@ -34,6 +34,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="mascota.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="mascota.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
